--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: 23
+        node-version: '23'
 
     steps:
     - uses: actions/checkout@v4
