--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,24 +1,15 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
-
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [ "23" ]
-
-
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
@@ -33,8 +24,15 @@ jobs:
         echo "Creating zip from dist directory"
         zip -r dist.zip dist/
       
-    - name: Upload zip artifact
-      uses: actions/upload-artifact@v4
+    # Upload to release instead of artifact
+    - name: Create Release
+      id: create_release
+      uses: softprops/action-gh-release@v2
       with:
-        name: dist-artifact
-        path: dist.zip
+        files: dist.zip
+        tag_name: stable
+        name: Stable Build
+        body: Latest stable build
+        draft: false
+        prerelease: false
+        token: ${{ secrets.GITHUB_TOKEN }}
