--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,6 +4,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+
+# Add these permissions
+permissions:
+  contents: write  # This allows creating releases
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,7 +29,7 @@ jobs:
         echo "Creating zip from dist directory"
         zip -r dist.zip dist/
       
-    # Upload to release instead of artifact
+    # Upload to release
     - name: Create Release
       id: create_release
       uses: softprops/action-gh-release@v2
@@ -35,4 +40,3 @@ jobs:
         body: Latest stable build
         draft: false
         prerelease: false
-        token: ${{ secrets.GITHUB_TOKEN }}
